cmake_minimum_required (VERSION 3.0)
add_definitions(-std=c++11)
project (octo-dragon)

include_directories(src/logger)
include_directories(src/dragon)
include_directories(src/server)
include_directories(src/config)
include_directories(src/router)
include_directories(src/middleware)
include_directories(src/orm)

add_library( dragon src/dragon/dragon.cc )
add_library( server src/server/server.cc )
add_library( dConfig src/config/config.cc )
add_library( router src/router/router.cc )
add_library( orm src/orm/orm.cc )
add_library( middleware src/middleware/middleware.cc )

add_executable(app src/app.cc)

target_link_libraries( server microhttpd )
target_link_libraries( dConfig config )
target_link_libraries( server dConfig )
target_link_libraries( dragon server )
target_link_libraries( dragon orm )
target_link_libraries( dragon router )
target_link_libraries( dragon middleware )
target_link_libraries( app dragon )